--- a/real_estate_rental_data_analysis.ipynb
+++ b/real_estate_rental_data_analysis.ipynb
@@ -1,17 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis Report I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# libs\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +142,7 @@
        "4   800.0       230.0     NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +150,148 @@
    "source": [
     "df_rental = pd.read_csv('datasets/aluguel.csv', sep=';')\n",
     "df_rental.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame characteristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32960 entries, 0 to 32959\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Tipo        32960 non-null  object \n",
+      " 1   Bairro      32960 non-null  object \n",
+      " 2   Quartos     32960 non-null  int64  \n",
+      " 3   Vagas       32960 non-null  int64  \n",
+      " 4   Suites      32960 non-null  int64  \n",
+      " 5   Area        32960 non-null  int64  \n",
+      " 6   Valor       32943 non-null  float64\n",
+      " 7   Condominio  28867 non-null  float64\n",
+      " 8   IPTU        22723 non-null  float64\n",
+      "dtypes: float64(3), int64(4), object(2)\n",
+      "memory usage: 2.3+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_rental.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>column_name</th>\n",
+       "      <th>data_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Tipo</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bairro</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quartos</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vagas</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suites</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Area</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valor</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Condominio</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IPTU</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "column_name data_type\n",
+       "Tipo           object\n",
+       "Bairro         object\n",
+       "Quartos         int64\n",
+       "Vagas           int64\n",
+       "Suites          int64\n",
+       "Area            int64\n",
+       "Valor         float64\n",
+       "Condominio    float64\n",
+       "IPTU          float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# an elegant format to show dtypes info\n",
+    "dtypes_info = pd.DataFrame(df_rental.dtypes, columns=['data_type'])\n",
+    "dtypes_info.columns.name = 'column_name'\n",
+    "dtypes_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transforming Data"
    ]
   },
   {
