change aluguel.csv dataset to rentals.csv and replace its name in notebooks

--- a/real_estates_rental_data_analysis_1.ipynb
+++ b/real_estates_rental_data_analysis_1.ipynb
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "df_rental = pd.read_csv('datasets/aluguel.csv', sep=';')\n",
+    "df_rental = pd.read_csv('datasets/rentals.csv', sep=';')\n",
     "df_rental.head()"
    ]
   },
