--- a/real_estates_rental_data_analysis_2.ipynb
+++ b/real_estates_rental_data_analysis_2.ipynb
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "df_rental = pd.read_csv('datasets/aluguel.csv', sep=';')\n",
+    "df_rental = pd.read_csv('datasets/rentals.csv', sep=';')\n",
     "df_rental.head()"
    ]
   },
