--- a/real_estates_rental_data_analysis_3.ipynb
+++ b/real_estates_rental_data_analysis_3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis Report II"
+    "# Analysis Report III"
    ]
   },
   {
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "df_rental = pd.read_csv('datasets/aluguel.csv', sep=';')\n",
+    "df_rental = pd.read_csv('datasets/rentals.csv', sep=';')\n",
     "print(df_rental.shape)\n",
     "df_rental.head()"
    ]
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Quitinete', 'Casa', 'Apartamento', 'Casa de Condomínio', 'Flat', 'Casa Comercial', 'Casa de Vila', 'Studio']\n"
+      "['Quitinete', 'Casa', 'Apartamento', 'Casa de Condomínio', 'Flat', 'Casa de Vila', 'Studio']\n"
      ]
     }
    ],
@@ -237,7 +237,6 @@
     "    'Apartamento',\n",
     "    'Casa de Condomínio',\n",
     "    'Flat',\n",
-    "    'Casa Comercial',\n",
     "    'Casa de Vila',\n",
     "    'Studio'\n",
     "]\n",
@@ -254,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23325, 9)\n"
+      "(23060, 9)\n"
      ]
     },
     {
@@ -363,7 +362,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23320</th>\n",
+       "      <th>23055</th>\n",
        "      <td>Apartamento</td>\n",
        "      <td>Méier</td>\n",
        "      <td>2</td>\n",
@@ -375,7 +374,7 @@
        "      <td>48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23321</th>\n",
+       "      <th>23056</th>\n",
        "      <td>Quitinete</td>\n",
        "      <td>Centro</td>\n",
        "      <td>0</td>\n",
@@ -387,7 +386,7 @@
        "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23322</th>\n",
+       "      <th>23057</th>\n",
        "      <td>Apartamento</td>\n",
        "      <td>Jacarepaguá</td>\n",
        "      <td>3</td>\n",
@@ -399,7 +398,7 @@
        "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23323</th>\n",
+       "      <th>23058</th>\n",
        "      <td>Apartamento</td>\n",
        "      <td>São Francisco Xavier</td>\n",
        "      <td>2</td>\n",
@@ -411,7 +410,7 @@
        "      <td>37.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23324</th>\n",
+       "      <th>23059</th>\n",
        "      <td>Apartamento</td>\n",
        "      <td>Leblon</td>\n",
        "      <td>2</td>\n",
@@ -424,7 +423,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>23325 rows × 9 columns</p>\n",
+       "<p>23060 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -435,11 +434,11 @@
        "3      Apartamento          Higienópolis        1      0       0    48   \n",
        "4      Apartamento          Vista Alegre        3      1       0    70   \n",
        "...            ...                   ...      ...    ...     ...   ...   \n",
-       "23320  Apartamento                 Méier        2      0       0    70   \n",
-       "23321    Quitinete                Centro        0      0       0    27   \n",
-       "23322  Apartamento           Jacarepaguá        3      1       2    78   \n",
-       "23323  Apartamento  São Francisco Xavier        2      1       0    48   \n",
-       "23324  Apartamento                Leblon        2      0       0    70   \n",
+       "23055  Apartamento                 Méier        2      0       0    70   \n",
+       "23056    Quitinete                Centro        0      0       0    27   \n",
+       "23057  Apartamento           Jacarepaguá        3      1       2    78   \n",
+       "23058  Apartamento  São Francisco Xavier        2      1       0    48   \n",
+       "23059  Apartamento                Leblon        2      0       0    70   \n",
        "\n",
        "        Valor  Condominio  IPTU  \n",
        "0      1700.0       500.0  60.0  \n",
@@ -448,13 +447,13 @@
        "3       800.0       230.0   NaN  \n",
        "4      1200.0         NaN   NaN  \n",
        "...       ...         ...   ...  \n",
-       "23320   900.0       490.0  48.0  \n",
-       "23321   800.0       350.0  25.0  \n",
-       "23322  1800.0       800.0  40.0  \n",
-       "23323  1400.0       509.0  37.0  \n",
-       "23324  3000.0       760.0   NaN  \n",
+       "23055   900.0       490.0  48.0  \n",
+       "23056   800.0       350.0  25.0  \n",
+       "23057  1800.0       800.0  40.0  \n",
+       "23058  1400.0       509.0  37.0  \n",
+       "23059  3000.0       760.0   NaN  \n",
        "\n",
-       "[23325 rows x 9 columns]"
+       "[23060 rows x 9 columns]"
       ]
      },
      "execution_count": 5,
@@ -479,11 +478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_residential.to_csv('datasets/residential.csv', sep=';')"
+    "df_residential.to_csv('datasets/residential.csv', sep=';', index=False)"
    ]
   }
  ],
